# huffman

./: .gitignore  CMakeLists.txt  FILE_FORMAT.md  README.md
src/: bheap.c  bheap.h  binary_heap.c  btree.c  btree.h  btreenode.c  btreenode.h  common.h  file_reader.c  file_reader.h  file_writer.c  file_writer.h  huffman.c  huffman.h  main.c
